# neural_cam_ros

./: .gitattributes  CMakeLists.txt  CMakeLists.txt~  LICENSE  LICENSE~  README.md  README.md~  detector  manifest.xml  manifest.xml~  multicam.launch  multicam.launch~  setup.cfg  setup.cfg~  try.launch~
cfg/: cpuNet.data  cpuNet10_1class.cfg  cpuNet10_1class.cfg~  cpuNetexp.cfg  cpuNetexp.cfg~  tiny-yolo-mod.cfg~
msg/: Object.msg  Object.msg~  ObjectStack.msg  ObjectStack.msg~  obstacle.msg  obstacle.msg~  obstacleStack.msg  obstacleStack.msg~
msg_gen/cpp/include/neural_cam_ros/: obstacle.h  obstacleStack.h
msg_gen/lisp/: _package.lisp  _package_obstacle.lisp  _package_obstacleStack.lisp  neural_cam_ros-msg.asd  obstacle.lisp  obstacleStack.lisp
src/: detector.c  detector.c~  detector.h  detector.h~  main.cpp  main.cpp~  supportfunc.cpp  supportfunc.cpp~  supportfunc.hpp  supportfunc.hpp~  supportfunc.h~
src/detector/: data.c  detector.c  detector.c~  detector.h  image.c  main.cpp  supportfunc.hpp
src/neural_cam_ros/msg/: __init__.py  _obstacle.py  _obstacleStack.py
